# ansible-podlet

./: pyproject.toml
src/ansible-podlet/: config.py  parse.py
src/ansible_podlet/: __init__.py  cli.py
