[project]
name = "ansible_podlet"
version = "0.0.1"
description = "Program to assist in converting docker-compose into podman quadlets for an ansible deployment"
authors = [
    {name = "Nite Coder",email = "coderofthenite@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configobj (>=5.0.9,<6.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)"
]

[project.scripts]
dnalet = "ansible_podlet.cli:main" 

[tool.poetry.scripts]
dnalet = "ansible_podlet.cli:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
